[tool.poetry]
name = "design_patterns"
version = "0.1.0"
description = ""
authors = ["nick-borodulin <nikitaborodulin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
pytest = "^8.3.2"
mypy = "^1.11.1"
ruff = "^0.5.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
